Profile: Fix border on contributions graph
Looks strange. May be a temporary bug, only affected when logged in.

--- a/github-classic.user.css
+++ b/github-classic.user.css
@@ -2,7 +2,7 @@
 @name         GitHub Classic
 @namespace    https://github.com/lah7/github-classic-css
 @homepageURL  https://github.com/lah7/github-classic-css
-@version      2025.05.16
+@version      2025.06.05
 @license      Other
 @description  Bring back aesthetics from the classic GitHub interface.
 @author       lah7
@@ -844,5 +844,11 @@
     input[type=checkbox]::before,
     input[type=radio]::before {
         content: unset;
+    }
+
+    /* Individual days in the contribution graph didn't show a border - bug? feature? */
+    .ContributionCalendar-day,
+    .ContributionCalendar-day[data-level="0"] {
+        border: none;
     }
 }
